TD-02 - Front created.

--- a/front/index.html
+++ b/front/index.html
@@ -3,24 +3,31 @@
 
 <head>
   <title>to do list</title>
-  <script src="https://unpkg.com/vue"></script>
-  <style>
-    body {
-      font-family: Arial;
-    }
-  </style>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
-  <input type="button" value="new task"></input>
   <div id="app">
-    <ul>
-      <li v-for="task in tasks">
-        {{ task }}
-        <button @click="edit(task)">edit</button>
-        <button @click="deleteTask(task)">delete</button>
-      </li>
-    </ul>
+    <input id="createButton" type="button" value="Create new task" v-on:click="create()"></input>
+    <br />
+    <table v-if="tasks.findIndex((t) => t.state === 'todo') > -1">
+      <caption>to do list:</caption>
+      <tr v-for="(task, index) in tasks" v-if="task.state === 'todo'">
+        <td width="60%">{{ task.text }}</td>
+        <td width="10%"><button @click="edit(task, index)">edit</button></td>
+        <td class="doneButtonCol"><button @click="done(task, index)">done</button></td>
+        <td class="deleteButtonCol"><button @click="deleteTask(task, index)">delete</button></td>
+      </tr>
+    </table>
+    <table v-if="tasks.findIndex((t) => t.state === 'done') > -1">
+      <caption>done list:</caption>
+      <tr v-for="(task, index) in tasks" v-if="task.state==='done'">
+        <td width="70%">{{ task.text }}</td>
+        <td class="doneButtonCol"><button @click="undone(task, index)">undone</button></td>
+        <td class="deleteButtonCol"><button @click="deleteTask(task, index)">delete</button></td>
+      </tr>
+    </table>
   </div>
 </body>
 
@@ -31,17 +38,30 @@
     el: '#app',
     data: {
       tasks: [
-        'create back',
-        'create mongodb',
-        'get request to back for this list'
+        { id: 101, text: 'create back', state: 'todo' },
+        { id: 102, text: 'create mongodb', state: 'todo' },
+        { id: 103, text: 'get request to back for this list', state: 'todo' },
       ]
     },
     methods: {
-      edit: (task) => {
-        alert(`Here will be editor of task: \n ${task}`); 
+      create: function () {
+        console.log('create');
+        const text = prompt(`Create new task:`);
+        if (text) { this.tasks.push({ id: 100 + this.tasks.length, text, state: 'todo' }); }
       },
-      deleteTask: (task) => {
-        confirm(`Are you sure to delete the task: \n ${task}`);
+      edit: (task) => {
+        const text = prompt(`Edition task:`, task.text);
+        if (text) { task.text = text; }
+      },
+      deleteTask: function (task, index) {
+        if (!confirm(`Are you sure to delete the task? \n ${task.text}`)) { return; }
+        this.tasks.splice(index, 1);
+      },
+      done: (task) => {
+        task.state = 'done';
+      },
+      undone: (task) => {
+        task.state = 'todo';
       }
     }
   })
