--- a/front/index.html
+++ b/front/index.html
@@ -5,12 +5,48 @@
   <title>to do list</title>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="main.js"></script>
+  <script src="dialogCreate.html"></script>
   <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="modal.css" />
+  <script type="text/x-template" id="dialog-create-template">
+    <transition name="modal">
+      <div class="modal-mask">
+        <div class="modal-wrapper">
+          <div class="modal-container">
+  
+            <div class="modal-header">
+              <slot name="header">
+                default header
+              </slot>
+            </div>
+  
+            <div class="modal-body">
+              <slot name="body">
+                default body
+              </slot>
+            </div>
+  
+            <div class="modal-footer">
+              <slot name="footer">
+                default footer
+                <button class="modal-default-button" @click="$emit('close')">
+                  OK
+                </button>
+              </slot>
+            </div>
+          </div>
+        </div>
+      </div>
+    </transition>
+  </script>
 </head>
 
 <body>
   <div id="app">
     <input id="buttonCreate" type="button" value="Create new task" v-on:click="create()"></input>
+    <input id="buttonCreateDialog" type="button" value="Create new task with options"
+      v-on:click="openDialogCreate()"></input>
+    <modal v-if="isOpenDialogCreate" @close="closeDialogCreate()"></modal>
     <br />
     <table v-if="tasks.findIndex((t) => t.state === 'todo') > -1">
       <caption>to do list:</caption>
